[tool.black]
line-length = 88
py36 = true
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | \.vscode
  | _build
  | buck-out
  | build
  | dist
  | setup\.py
)/
'''

[tool.isort]
combine_as_imports = true
default_section = "LOCALFOLDER"
force_grid_wrap = false
include_trailing_comma = true
known_first_party = """
  aiohttp_typed_views
  example
"""
known_third_party = """
  aiohttp
  pydantic
  pytest
"""
line_length = 88
multi_line_output = 3
not_skip = "__init__.py"
sections = "FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER"
skip = ".eggs,.tox,.venv,venv"

[tool.poetry]
name = "aiohttp-typed-views"
version = "0.2.0-alpha.0"
description = "Typed class based views for aiohttp framework"
authors = [
  "Nikita Grishko <gr1n@protonmail.com>"
]
license = "MIT"

readme = "README.md"

homepage = "https://github.com/Gr1N/aiohttp-typed-views"
repository = "https://github.com/Gr1N/aiohttp-typed-views"

keywords = ["asyncio", "aiohttp", "typing", "class based views"]

classifiers = [
  "Topic :: Software Development :: Libraries :: Python Modules"
]

[tool.poetry.dependencies]
python = "^3.7"

aiohttp = ">=3.5.4"
pydantic = ">=0.20.1"

[tool.poetry.dev-dependencies]
black = { version = ">=18.9b0", allows-prereleases = true }
flake8 = ">=3.7.7"
flake8-bugbear = ">=18.8.0"
isort = { version = ">=4.3.15", extras = ["pyproject"] }
mypy = ">=0.670"
pytest = ">=4.3.0"
pytest-asyncio = ">=0.10.0"
pytest-cov = ">=2.6.1"
tox = ">=3.7.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
