[tool.black]
line-length = 88
target-version = ["py37"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.venv
  | \.vscode
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
combine_as_imports = true
default_section = "LOCALFOLDER"
force_grid_wrap = false
include_trailing_comma = true
known_first_party = """
  aioapi
  example
"""
known_third_party = """
  aiohttp
  pydantic
  pytest
"""
line_length = 88
multi_line_output = 3
not_skip = "__init__.py"
sections = "FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER"
skip = ".eggs,.venv,venv"

[tool.poetry]
name = "aioapi"
version = "0.2.0-alpha.0"
description = "Yet another way to build APIs using AIOHTTP framework"
authors = [
  "Nikita Grishko <gr1n@protonmail.com>"
]
license = "MIT"

readme = "README.md"

homepage = "https://github.com/Gr1N/aioapi"
repository = "https://github.com/Gr1N/aioapi"

keywords = ["asyncio", "aiohttp", "api", "typing"]

classifiers = [
  "Development Status :: 4 - Beta",
  "Framework :: AsyncIO",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Libraries :: Python Modules"
]

[tool.poetry.dependencies]
python = "^3.7"

aiohttp = ">=3.5.4"
pydantic = ">=0.20.1"

[tool.poetry.dev-dependencies]
black = { version = ">=18.9b0", allows-prereleases = true }
flake8 = ">=3.7.7"
flake8-bugbear = ">=18.8.0"
isort = { version = ">=4.3.15", extras = ["pyproject"] }
mypy = ">=0.670"
pytest = ">=4.3.0"
pytest-asyncio = ">=0.10.0"
pytest-cov = ">=2.6.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
